@@ -32,8 +32,6 @@
    markers won't show up properly on the minimap; should fix those.
    
  * "Explored Caverns" toggle, based on torch placement
-   
- * Use a TreeMap for SMP players so their names are sorted
  
  * As I've been editing the X-Ray code, I've been using underscore_variables like
    that, mostly, instead of the camelCase which was more prevalent.  Should really
